--- a/src/components/MenuPage/style.css
+++ b/src/components/MenuPage/style.css
@@ -39,7 +39,7 @@
 .menu-display {
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: center;
 }
 
 .menu-page .card {
